Update repo URL

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "homepage": "https://github.com/arose/ngl#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/arose/ngl.git"
+    "url": "https://github.com/omaraltayyan/ngl.git"
   },
   "bugs": {
     "url": "https://github.com/arose/ngl/issues"
